[package]
name = "nebulis"
version = "0.1.0"
edition = "2024"

[dependencies]
mlua = { version = "0.11.6", features = ["lua54", "vendored"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dirs = "5"
smithay-client-toolkit = "0.19"
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.2", features = ["client"] }
tiny-skia = "0.11"
